frontend/src/App.css
:root {
  --primary-bg: #FBDFCE;
  --surface: #ffffff;
  --card: #fffaf7;

  --text: #2b211b;
  --muted: #7A6D64;

  --input-color: #f4f4f4;

  --primary: #7A5640;
  --primary-hover: #654632;

  --accent: #FAB182;
  --accent-soft: #C78C67;

  --border: #e7cdbd;
  --shadow: rgba(122, 86, 64, 0.12);
}

/* Global Styles */
body {
  margin: 0;
  font-family: Arial, sans-serif;
  background: var(--primary-bg);
  color: var(--text);
}

.container {
  max-width: 450px;
  margin: 0 auto;
  min-height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 2rem;
}

.app-layout {
  display: grid;
  grid-template-columns: 1fr 3fr;
  gap: 3px;
  padding: 5px;
}

.card, .header-container, .sidebar-wrapper {
  box-shadow: 0 4px 12px rgba(0,0,0,0.08);
}

button {
  border: none;
  transition: 0.2s ease;
  font-weight: 600;
  background: var(--accent);
  color: var(--text);
  padding: 10px;
  margin-top: 5px;
  border-radius: 14px;
}

button:hover {
  background: var(--primary-hover);
  color: var(--card);
  cursor: pointer;
}

/* Header Styles */

.header-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 1rem;
  padding: 1rem 2rem;
}

.header-title {
  color: var(--text);
  font-size: clamp(1.6rem, 3vw, 3rem);
}

.brand-icon {
  display: flex;
  align-items: center;
  gap: 10px;
  flex-shrink: 0;
}

.search-box {
  display: flex;
  flex: 1;
  justify-content: space-between;
  align-items: center;
  gap: 8px;
  background: var(--card);
  padding: 10px 14px;
  border-radius: 12px;
  width: 100%;
  max-width: 300px;
}

.search-box input {
  border: none;
  outline: none;
  background: transparent;
}

.search-icon {
  cursor: pointer;
}

.logout-btn {
  margin-left: 0;
}

h2 {
  margin: 20px 0px;
}

/* Sidebar Styles */

.sidebar-wrapper {
  width: 200px;
  min-height: 100vh;
  background: var(--accent);
  display: flex;
  flex-direction: column;
  border-right: 1px solid rgba(255,255,255,0.08);
  transition: left 0.3s ease;
  cursor: pointer;
}

.sidebar-wrapper.open {
  left: 0;
}

.sidebar-logo h2 {
  margin: 0 0 32px;
  font-size: 1.6rem;
  font-weight: 700;
}

.sidebar-wrapper nav {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 10px;
  padding: 15px;
}

.sidebar-wrapper nav a {
  text-decoration: none;
  color: var(--text);
  padding: 12px 14px;
  border-radius: 12px;
  transition: 0.2s ease;
}

.sidebar-wrapper a:hover {
  background: var(--accent-soft);
}

.sidebar-nav a.active {
  background: var(--accent);
  color: var(--text);
}

.hamburger {
  display: block;
  background: none;
  border: none;
  margin-right: 10px;
}

/* Login Form Styles */
.login-form {
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  background: var(--card);
  padding: 2rem;
  border-radius: 12px;
  box-shadow: 0 10px 25px rgba(0,0,0,0.08);
}

.login-input {
  height: 50px;
  width: 100%;
  box-sizing: border-box;
  background-color: var(--input-color);
  color: var(--primary);
  padding: 0.9rem;
  border-radius: 10px;
  border: 1px solid var(--border);
  outline: none;
  font-size: 16px;
}

.login-button {
  padding: 0.9rem;
}

/* Dashboard Styles */
.dashboard-main {
  max-width: 1100px;
  padding: 1rem;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.stats-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
  gap: 1rem;
}

.content-grid {
  display: grid;
  grid-template-columns: 2fr 1fr;
  gap: 1rem;
}

.card,
.welcome-card {
  padding: 20px;
  border-radius: 12px;
  background: var(--surface);
}

.view-notes-list, .recent-notes {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
  gap: 1.5rem;
  padding: 2rem;
  align-items: start;
}

.note-card {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: flex-start;
  gap: 0.5rem;
  width: 100%;
  min-height: 150px;

  background: var(--card);
  border-radius: 12px;
  padding: 1rem;
  position: relative;
  transition: transform 0.2s ease;
  box-shadow: 0 2px 10px rgba(0,0,0,0.08)
}

.note-card:hover {
  transform:translateY(-2px);
  cursor: pointer;
}

.note-card-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-size: 1.1rem;
  width: 100%;
  margin: 0;
}

.favorite-icon {
  cursor: pointer;
  width: 18px;
  height: 18px;
}

.note-card-content {
  line-height: 1.4;
  color: var(--muted);
  font-size: 0.9rem;

  display: -webkit-box;
  --webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

.note-card-actions {
  display: flex;
  gap: 0.5rem;
  margin-top: 1rem;
  border-radius: 8px;
}

/* New Note Page Styles */

.new-note-page {
  max-width: 700px;
  margin: 0 auto;
  padding: 2rem;
}

.new-note-form {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.new-note-title, .new-note-content {
  padding: 1rem;
  border-radius: 12px;
  border: 1px solid var(--border);
  color: var(--text);
}

.new-note-title {
  font-size: 1.2rem;
}

.new-note-content {
  min-height: 300px;
  resize: vertical;
}

.new-note-buttons {
  display: flex;
  justify-content: center;
  gap: 1rem;
}

.form-metadata {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;
}

.category-dropdown, .tag-field {
  display: flex;
  align-items: center;
  gap: 10px;
  margin: 12px 0;
}

.category-label, .tag-label {
  background: var(--accent-soft);
  padding: 6px 12px;
  border-radius: 10px;
  font-weight: 500;
  color: var(--text)
}

.category-select {
  padding: 8px 12px;
  border-radius: 8px;
  border: 1px solid var(--muted);
  background: var(--surface);
  cursor: pointer;
  appearance: none;
  border: none;
  background: var(--card);
}

.tag-input {
  padding: 8px 12px;
  border-radius: 8px;
  border: 1px solid var(--muted);
  max-width: 350px;
  color: var(--text);
}

/* Delete Confirmation Modal Styles */
.confirm-modal-overlay {
  display: flex;
  justify-content: center;
  align-items: center;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.5);
}


.confirm-modal-content {
  background-color: white;
  margin: 10% auto;
  padding: 20px;
  width: 275px;
  border-radius: 10px;
}

@media (min-width: 769px) {
  .sidebar-wrapper {
    position: static;
    left: auto;
    transform: none;
    width: 240px;
  }

  .app-layout {
    display: flex;
  }

  .main-wrapper {
    flex: 1;
  }

  .hamburger, .close-btn {
    display: none;
  }
}

@media (max-width: 768px) {
  .app-layout {
    grid-template-columns: 1fr;
  }

  .header-container {
    flex-wrap: wrap;
  }

  .sidebar-wrapper {
    position: fixed;
    left: -260px;
    top: 0;
    height: 100vh;
    width: 260px;
    transition: left 0.3s ease;
    z-index: 1000;
  }

  .sidebar-wrapper.open {
    left: 0;
  }

  .search-box {
    order: 3;
    width: 100%;
    max-width: none;
  }

  .close-btn {
    display: block;
    background: none;
    border: none;
    margin: 10px;
    cursor: pointer;
    align-self: flex-end;
  }
}

